2016-09-07  David Malcolm  <dmalcolm@redhat.com>

	* gcc.dg/plugin/diagnostic_plugin_test_string_literals.c: Include
	"substring-locations.h".

2016-09-07  Richard Biener  <rguenther@suse.de>

	PR c/77450
	* c-c++-common/vector-subscript-8.c: Move ..
	* gcc.dg/pr77450.c: ... here.

2016-09-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/77393
	* gfortran.dg/fmt_f0_2.f90: Update test.
	* gfortran.dg/fmt_f0_3.f90: New test.

2016-09-07  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR debug/77389
	* g++.dg/debug/dwarf2/template-params-12g.C: Pass -gno-strict-dwarf
	in dg-options.

	PR debug/57519
	* g++.dg/debug/dwarf2/imported-decl-2.C: Likewise.

2016-09-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/69255
	* gcc.target/i386/pr69255-1.c: New test.
	* gcc.target/i386/pr69255-2.c: New test.
	* gcc.target/i386/pr69255-3.c: New test.

2016-09-06  Martin Sebor  <msebor@redhat.com>

	PR c/77336
	* gcc.dg/format/miss-7.c: New test.

2016-09-06  Uros Bizjak  <ubizjak@gmail.com>

	* gfortran.dg/c_by_val_1.f: Correct the call to c_to_c and c_to_c8.

2016-09-06  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/77378
	PR gcov-profile/77466
	* gcc.dg/profile-update-warning.c: New test.

2016-09-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/77479
	* gcc.dg/torture/pr77479.c: New testcase.

2016-09-06  Richard Biener  <rguenther@suse.de>

	PR c/77450
	* c-c++-common/vector-subscript-7.c: Adjust.
	* c-c++-common/vector-subscript-8.c: New testcase.

2016-09-06  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.dg/Wno-frame-address.c: Skip for avr-*-*.

2016-09-05  Jakub Jelinek  <jakub@redhat.com>

	PR target/77476
	* gcc.target/i386/avx512f-pr77476.c: New test.
	* gcc.target/i386/avx512bw-pr77476.c: New test.
	* gcc.target/i386/avx512dq-pr77476.c: New test.

	* lib/target-supports.exp (check_effective_target_vect_simd_clones):
	Update comment to mention also avx512f.

	PR sanitizer/77396
	* g++.dg/asan/pr77396-2.C: New test.
